app/kubernetes/manifests/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-liferay
  namespace: api
  labels:
    app: app-liferay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-liferay
  template:
    metadata:
      labels:
        app: app-liferay
    spec:
      containers:
        - name: app-liferay
          image: node:18
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /posts
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /posts
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
