app/kubernetes/manifests/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-liferay
  namespace: api
spec:
  selector:
    app: app-liferay
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
